Use new Media Manager in admin screens.

--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -11,3 +11,6 @@
 
 @import 'components/admin-sidebar.less';
 @import 'components/asynchronous-tasks.less';
+@import 'components/media-manager.less';
+@import 'components/media-uploader.less';
+@import 'components/thumbnails-generator.less';
