Small appareance improvement for file groups in Media Manager.

--- a/resources/css/awpcp-admin.css
+++ b/resources/css/awpcp-admin.css
@@ -580,6 +580,10 @@
   /* Uploaded File Actions */
   /* Uploaded Video Actions */
 }
+#classiwrapper .awpcp-uploaded-files-group,
+.awpcp-media-center .awpcp-uploaded-files-group {
+  padding-bottom: 1px;
+}
 #classiwrapper .awpcp-uploaded-files-group-title,
 .awpcp-media-center .awpcp-uploaded-files-group-title {
   background: #EEE;
