--- a/resources/less/components/media-manager.less
+++ b/resources/less/components/media-manager.less
@@ -1,4 +1,8 @@
 #classiwrapper, .awpcp-media-center {
+
+    .awpcp-uploaded-files-group {
+        padding-bottom: 1px;
+    }
     .awpcp-uploaded-files-group-title {
         background: #EEE;
         border: 1px solid #DDD;
