--- a/resources/less/tables.less
+++ b/resources/less/tables.less
@@ -34,38 +34,40 @@
             padding-left: 10px;
         }
 
-        tr { border: 1px solid #ccc; }
+        tr {
+            border: 1px solid #ccc;
 
-        td {
-            /* Behave  like a "row" */
-            border: none;
-            border-bottom: 1px solid #eee;
-            position: relative;
-            padding-top: 3px;
-            padding-bottom: 3px;
-            padding-left: 50%;
-            white-space: normal;
-            text-align:left;
-        }
+            td {
+                /* Behave  like a "row" */
+                border: none;
+                border-bottom: 1px solid #eee;
+                position: relative;
+                padding-top: 3px;
+                padding-bottom: 3px;
+                padding-left: 70%;
+                white-space: normal;
+                text-align:left;
+            }
 
-        td:before {
-            /* Now like a table header */
-            position: absolute;
-            /* Top/left values mimic padding */
-            top: 6px;
-            left: 6px;
-            width: 45%;
-            padding-right: 10px;
-            white-space: nowrap;
-            text-align:left;
-            font-weight: bold;
-        }
+            td:before {
+                /* Now like a table header */
+                position: absolute;
+                /* Top/left values mimic padding */
+                top: 6px;
+                left: 6px;
+                width: 45%;
+                padding-right: 10px;
+                white-space: nowrap;
+                text-align:left;
+                font-weight: bold;
+            }
 
-        /*
-        Label the data
-        */
-        td:before {
-            content: attr(data-title);
+            /*
+            Label the data
+            */
+            td:before {
+                content: attr(data-title);
+            }
         }
     }
 }
