Add Listing Actions component (#986).
The component will be used to show the Delete Ad and Mark as Sold listing actions
in the frontend version of the Edit Ad page. However, modules can easily add other
actions using existing hooks.

--- a/resources/css/awpcp-admin.css
+++ b/resources/css/awpcp-admin.css
@@ -492,7 +492,10 @@
 #awpcp-admin-settings form.facebook-integration-settings .section.disabled {
   color: #ccc;
 }
-.is-hidden {
+.is-hidden,
+.is-hidden[type="reset"],
+.is-hidden[type="button"],
+.is-hidden[type="submit"] {
   display: none;
 }
 .is-visible-inline-block {
