--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -12,6 +12,7 @@
 @import 'components/categories-list.less';
 @import 'components/file-manager.less';
 @import 'components/listings-widget.less';
+@import 'components/listing-actions.less';
 @import 'components/main-menu.less';
 @import 'components/multiple-region-selector.less';
 @import 'components/multiple-region-selector-form-table.less';
