--- a/resources/css/awpcpstyle.css
+++ b/resources/css/awpcpstyle.css
@@ -694,7 +694,10 @@ p.ad_status_msg {
   list-style-type: circle;
   list-style-position: inside;
 }
-.is-hidden {
+.is-hidden,
+.is-hidden[type="reset"],
+.is-hidden[type="button"],
+.is-hidden[type="submit"] {
   display: none;
 }
 .is-visible-inline-block {
@@ -1311,6 +1314,23 @@ p.ad_status_msg {
     float: none;
     width: 100%;
   }
+}
+.awpcp-listing-actions-component {
+  background: #DDD;
+  border: 1px solid #BBB;
+  padding: 8px;
+}
+.awpcp-listing-action-form {
+  display: inline-block;
+  margin: 0;
+  padding: 2px;
+}
+.awpcp-listing-action-form.is-active {
+  background: #ebebeb;
+}
+.awpcp-listing-action-form-confirmation {
+  font-weight: bold;
+  font-style: italic;
 }
 .awpcp-navigation .awpcp-menu-toggle {
   background: #000000 url("../images/bullet_arrow_down.png") 10px center no-repeat;
