--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -8,6 +8,8 @@
 @import 'forms.less';
 @import 'tables.less';
 
+@import 'frontend/modules/listings.less';
+
 @import 'components/category-dropdown.less';
 @import 'components/categories-list.less';
 @import 'components/file-manager.less';
