--- a/resources/less/tables.less
+++ b/resources/less/tables.less
@@ -17,7 +17,8 @@
 /* copied from http://elvery.net/demo/responsive-tables/#flip-scroll */
 @media only screen and (max-width: 800px) {
 
-    .awpcp-table {
+    table.awpcp-table, /* to avoid specificity problems */
+    .awpcp-table, {
         /* Force table to not be like tables anymore */
         table, thead, tbody, th, td, tr {
             display: block;
@@ -44,7 +45,7 @@
                 position: relative;
                 padding-top: 3px;
                 padding-bottom: 3px;
-                padding-left: 70%;
+                padding-left: 70% !important;
                 white-space: normal;
                 text-align:left;
             }
