--- a/resources/less/components/listings-widget.less
+++ b/resources/less/components/listings-widget.less
@@ -66,6 +66,10 @@
     .awpcp-listings-widget-item-with-right-thumbnail-in-desktop .awpcplatestthumb {
         .right_thumbnail();
     }
+
+    .awpcp-listings-widget-item-listing-link {
+        position: relative;
+    }
 }
 
 @media screen and (max-width: 44em) {
