--- a/resources/less/messages.less
+++ b/resources/less/messages.less
@@ -43,6 +43,10 @@
     display: none;
 }
 
+.awpcp-updated {
+    border-color: #E6DB55;
+    display: block !important;
+}
 .awpcp-error {
     background-color: #FFEBE8;
     border-color: #CC0000;
