--- a/resources/css/awpcpstyle.css
+++ b/resources/css/awpcpstyle.css
@@ -782,6 +782,10 @@ p.ad_status_msg {
 .ghost {
   display: none;
 }
+.awpcp-updated {
+  border-color: #E6DB55;
+  display: block !important;
+}
 .awpcp-error {
   background-color: #FFEBE8;
   border-color: #CC0000;
