Use Listings Form Step in Place Ad page.

--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -11,6 +11,7 @@
 
 @import 'components/admin-sidebar.less';
 @import 'components/asynchronous-tasks.less';
+@import 'components/form-steps.less';
 @import 'components/media-manager.less';
 @import 'components/media-uploader.less';
 @import 'components/thumbnails-generator.less';
