--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -12,6 +12,7 @@
 
 @import 'components/category-dropdown.less';
 @import 'components/categories-list.less';
+@import 'components/form-steps.less';
 @import 'components/listings-widget.less';
 @import 'components/listing-actions.less';
 @import 'components/main-menu.less';
