Add support for DatePicker fields in Extra Fields module.

--- a/resources/css/awpcpstyle.css
+++ b/resources/css/awpcpstyle.css
@@ -56,14 +56,19 @@
 .awpcp-page .awpcp-form-spacer .hidden {
   display: none;
 }
-.awpcp-page .awpcp-range-search label {
+.awpcp-page .awpcp-range-search label,
+.awpcp-page .awpcp-date-range-search label {
   display: inline;
   font-weight: normal;
   margin-right: 2px;
 }
-.awpcp-page .awpcp-range-search input {
+.awpcp-page .awpcp-range-search input,
+.awpcp-page .awpcp-date-range-search input {
   width: 60px;
   margin-right: 5px;
+}
+.awpcp-page .awpcp-date-range-search input {
+  width: 200px;
 }
 /* =Place Ad Page
 ---------------------------------------------------------------------------- */
