--- a/resources/less/legacy/frontend.less
+++ b/resources/less/legacy/frontend.less
@@ -62,14 +62,21 @@
     display: none;
 }
 
-.awpcp-page .awpcp-range-search label {
-    display: inline;
-    font-weight: normal;
-    margin-right: 2px;
+.awpcp-page .awpcp-range-search,
+.awpcp-page .awpcp-date-range-search {
+    label {
+        display: inline;
+        font-weight: normal;
+        margin-right: 2px;
+    }
+    input {
+        width: 60px;
+        margin-right: 5px;
+    }
 }
-.awpcp-page .awpcp-range-search input {
-    width: 60px;
-    margin-right: 5px;
+
+.awpcp-page .awpcp-date-range-search input {
+    width: 200px;
 }
 
 
