--- a/resources/css/awpcp-admin.css
+++ b/resources/css/awpcp-admin.css
@@ -524,6 +524,60 @@
 .align-text-right {
   text-align: right;
 }
+.awpcp-message {
+  background-color: #FFFBCC;
+  border: 1px solid #CCC;
+  color: #333;
+  margin: 10px 0;
+  padding: 8px 12px;
+}
+.awpcp-message p {
+  margin: 0;
+}
+.awpcp-page .awpcp-message p {
+  margin: 0;
+}
+.wp-admin .awpcp-message {
+  border-top: none;
+  border-right: none;
+  border-bottom: none;
+}
+.wp-admin .awpcp-message p {
+  margin: .5em 0;
+}
+.updated {
+  border-color: #E6DB55;
+}
+.error {
+  background-color: #FFEBE8;
+  border-color: #CC0000;
+}
+.info {
+  background-color: #A2C9DB;
+}
+.ghost {
+  display: none;
+}
+.awpcp-updated {
+  border-color: #E6DB55;
+  display: block !important;
+}
+.awpcp-error {
+  background-color: #FFEBE8;
+  border-color: #CC0000;
+  color: #ff0000;
+  font-weight: normal;
+  font-size: 14px;
+}
+.wrap div.awpcp-inline-form-error {
+  background: #FFF;
+  border-radius: 3px;
+  border-color: #D15151;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+  color: #555;
+  margin: 0.5em;
+  padding: 0.5em 0.7em;
+}
 .awpcp-row {
   clear: both;
 }
