--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -5,6 +5,7 @@
 
 @import 'colors.less';
 @import 'icons.less';
+@import 'messages.less';
 
 @import 'admin/layout.less';
 @import 'admin/modules/spinner.less';
