--- a/resources/css/awpcp-admin.css
+++ b/resources/css/awpcp-admin.css
@@ -100,7 +100,7 @@
   border-radius: 3px;
 }
 .awpcp-update-nag {
-  display: inline-block !important;
+  display: block !important;
 }
 .awpcp-sticky-notice {
   text-align: left;
