Add new Manage Custom Category Icon page.

--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -1,6 +1,8 @@
 @import 'legacy/admin.less';
 
+@import 'common/spinner.less';
 @import 'common/state.less';
+@import 'common/tabs.less';
 @import 'common.less';
 
 @import 'colors.less';
