Remove margin from list of attachments (#1207).

--- a/resources/less/legacy/frontend.less
+++ b/resources/less/legacy/frontend.less
@@ -648,5 +648,6 @@ p.ad_status_msg {
     .awpcp-attachments-list li {
         list-style-type: circle;
         list-style-position: inside;
+        margin: 0;
     }
 }
