--- a/resources/less/components/form-steps.less
+++ b/resources/less/components/form-steps.less
@@ -17,16 +17,17 @@
             border-bottom-right-radius: 4px;
             border-top-right-radius: 4px;
         }
+    }
 
-        a {
-            display: inline-block;
-            color: #333;
-            padding: 8px 10px;
-            font-size: 0.95em;
-            font-weight: 500;
-            line-height: 1.5em;
-            text-decoration: none;
-        }
+    .awpcp-form-steps-step-inner {
+        color: #333;
+        cursor: default;
+        display: inline-block;
+        font-size: 0.95em;
+        font-weight: 500;
+        line-height: 1.5em;
+        padding: 8px 10px;
+        text-decoration: none;
     }
 
     .awpcp-form-steps-step-number {
