Update appearance of Upgrade notice.

--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -118,6 +118,14 @@
 
 .awpcp-update-nag {
     display: block !important;
+    padding: 70px 15px 11px;
+}
+.awpcp-update-nag-title {
+    font-size: 1.7em;
+    font-weight: bold;
+}
+.awpcp-update-nag p {
+    font-size: 1.1em;
 }
 
 .awpcp-sticky-notice {
