Add new Manage Listings admin page.

--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -351,7 +351,7 @@
 /* =Admin Listings
 ---------------------------------------------------------------------------- */
 
-.awpcp-admin-listings .awpcp-category-filter {
+.awpcp-listings .awpcp-category-filter {
     @select_field_width: 180px;
     @submit_button_max_width: 90px;
 
@@ -401,7 +401,7 @@
 }
 
 
-.awpcp-admin-listings {
+.awpcp-listings {
     .add {
         margin-bottom: 10px;
     }
