Fix styles for thumbnails generator (#1287).

--- a/resources/less/components/thumbnails-generator.less
+++ b/resources/less/components/thumbnails-generator.less
@@ -1,6 +1,7 @@
 .awpcp-thumbnails-generator {
     video, canvas {
         position: absolute;
+        left: -9999px;
         visibility: hidden;
     }
 }
