Update the appearance of the Add/Edit Fee.

--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -304,10 +304,13 @@
 }
 
 .awpcp-admin-fees .inline-edit-col label .title {
-    width: 6em;
+    width: 10em;
 }
 .awpcp-admin-fees .inline-edit-col label .input-text-wrap {
-    margin-left: 6em;
+    margin-left: 10em;
+}
+.awpcp-admin-fees .inline-edit-col label .helptext {
+    float: right;
 }
 
 .awpcp-admin-fees .inline-edit-col .category-checklist {
