Show Check License Status button when license is expired or invalid.

--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -257,6 +257,15 @@
     .awpcp-license-valid {
         color: green;
     }
+    .awpcp-license-inactive {
+        color: blue;
+    }
+    .awpcp-license-expired {
+        color: orange;
+    }
+    .awpcp-license-invalid {
+        color: red;
+    }
 }
 
 /* =Admin Credit Plans
