Add awpcp-list-no-style CSS class.

--- a/resources/less/components/search-listings-widget.less
+++ b/resources/less/components/search-listings-widget.less
@@ -24,6 +24,9 @@
     .awpcp-list {
         margin: 0.4em 0 !important;
     }
+    .awpcp-list-no-style {
+        padding: 0 !important;
+    }
 
     .awpcp-form-spacer {
         margin: 0.4em 0;
