Replace Plupload Queue with a simpler Files Upload widget (#1318).
Inspired by http://awpcp.dev/wp-admin/upload.php in WP 4.3.

--- a/resources/less/common.less
+++ b/resources/less/common.less
@@ -28,6 +28,13 @@
     display: none;
 }
 
+.awpcp-hide-if-js {
+    display: none;
+}
+.no-js .awpcp-hide-if-js {
+    display: block;
+}
+
 .awpcp-width-20p {
     width: 20%;
 }
