Show progress bar while images are being uploaded.

--- a/resources/less/components/media-manager.less
+++ b/resources/less/components/media-manager.less
@@ -30,6 +30,11 @@
         text-align: center;
     }
 
+    .awpcp-progress-bar {
+        background-color: #00CA6B;
+        height: 8px;
+    }
+
     .awpcp-uploaded-file-thumbnail-container {
         background: #E2E2E2;
         margin-bottom: 10px;
