Hide sidebar if viewport is 960px wide or less.

--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -18,6 +18,13 @@
     width: auto;
 }
 
+@media only screen and (max-width:960px) {
+    .wrap .awpcp-main-content {
+        float: none;
+        width: auto;
+    }
+}
+
 
 /* Common
  --------------------------------------------------------------------------- */
