Update appearance of Media Uploader and Media Manager in different screen sizes.

--- a/resources/less/components/media-uploader.less
+++ b/resources/less/components/media-uploader.less
@@ -38,3 +38,7 @@
 .awpcp-media-uploader-restrictions {
     margin-top: 20px;
 }
+
+.awpcp-media-uploader-browser-button {
+    box-sizing: border-box;
+}
