--- a/resources/less/components/media-manager.less
+++ b/resources/less/components/media-manager.less
@@ -21,13 +21,13 @@
     .awpcp-uploaded-file {
         background: #EEE;
         border: 1px solid #E2E2E2;
-        float: left;
+        box-sizing: border-box;
         list-style-type: none;
-        margin: 0 5px 25px;
-        width: 180px;
-        padding: 3px;
+        margin: 0 0 25px;
         position: relative;
+        padding: 3px;
         text-align: center;
+        width: 100%;
     }
 
     .awpcp-progress-bar {
@@ -193,5 +193,52 @@
 
     .awpcp-uploaded-video-delete-action a {
         background-image: @delete_video_icon_url;
+    }
+}
+
+#classiwrapper, .awpcp-media-center {
+    .awpcp-media-manager-420 {
+        .awpcp-uploaded-file {
+            float: left;
+            width: 49%;
+            margin-right: 1%;
+            margin-left: 1%;
+        }
+        .awpcp-uploaded-file:nth-child(2n+1) {
+            margin-left: 0;
+        }
+        .awpcp-uploaded-file:nth-child(2n+2) {
+            margin-right: 0;
+        }
+    }
+
+    .awpcp-media-manager-620 {
+        .awpcp-uploaded-file {
+            float: left;
+            width: 32%;
+            margin-right: 1%;
+            margin-left: 1%;
+        }
+        .awpcp-uploaded-file:nth-child(3n+1) {
+            margin-left: 0;
+        }
+        .awpcp-uploaded-file:nth-child(3n) {
+            margin-right: 0;
+        }
+    }
+
+    .awpcp-media-manager-800 {
+        .awpcp-uploaded-file {
+            float: left;
+            width: 23.5%;
+            margin-right: 1%;
+            margin-left: 1%;
+        }
+        .awpcp-uploaded-file:nth-child(4n+1) {
+            margin-left: 0;
+        }
+        .awpcp-uploaded-file:nth-child(4n) {
+            margin-right: 0;
+        }
     }
 }
