--- a/resources/less/icons.less
+++ b/resources/less/icons.less
@@ -5,7 +5,9 @@
 @disable_attachment_icon_url: url(../images/disable-attachment.png);
 
 @approve_attachment_icon_url: url(../images/approve-attachment.png);
+@approve_attachment_icon_off_url: url(../images/approve-attachment-off.png);
 @reject_attachment_icon_url: url(../images/reject-attachment.png);
+@reject_attachment_icon_off_url: url(../images/reject-attachment-off.png);
 
 @enable_image_icon_url: url(../images/image-enable.png);
 @disable_image_icon_url: url(../images/image-disable.png);
