Update dynamic breakpoints for Media Manager.
If the available space is wider than 992px we use a fixed size for each image,
to allow the browser to put as many images in a single row as possible. It
looks better, IMO, even though they are not longer aligned with the invisible
borders of the container DIV.

I also had to show fewer elements per row in smaller screens, to accommodate
the new toggle button used to approve and reject media files.

--- a/resources/less/components/media-manager.less
+++ b/resources/less/components/media-manager.less
@@ -230,7 +230,7 @@
 }
 
 #classiwrapper, .awpcp-media-center {
-    .awpcp-media-manager-420 {
+    .awpcp-media-manager-480 {
         .awpcp-uploaded-file {
             float: left;
             width: 49%;
@@ -245,7 +245,7 @@
         }
     }
 
-    .awpcp-media-manager-620 {
+    .awpcp-media-manager-680 {
         .awpcp-uploaded-file {
             float: left;
             width: 32%;
@@ -260,18 +260,12 @@
         }
     }
 
-    .awpcp-media-manager-800 {
+    .awpcp-media-manager-992 {
         .awpcp-uploaded-file {
             float: left;
-            width: 23.5%;
-            margin-right: 1%;
-            margin-left: 1%;
-        }
-        .awpcp-uploaded-file:nth-child(4n+1) {
-            margin-left: 0;
-        }
-        .awpcp-uploaded-file:nth-child(4n) {
-            margin-right: 0;
+            width: 230px;
+            margin-right: 9px;
+            margin-left: 9px;
         }
     }
 }
