Update icons used in Media Manager (#1310).

--- a/resources/less/icons.less
+++ b/resources/less/icons.less
@@ -11,6 +11,6 @@
 
 @enable_image_icon_url: url(../images/image-enable.png);
 @disable_image_icon_url: url(../images/image-disable.png);
-@delete_image_icon_url: url(../images/image-delete.png);
+@delete_image_icon_url: url(../images/file-delete.png);
 @primary_image_icon_url: url(../images/image-primary.png);
 @not_primary_image_icon_url: url(../images/image-not-primary.png);
