--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -13,6 +13,7 @@
 @import 'admin/modules/spinner.less';
 
 @import 'admin/modules/form-fields.less';
+@import 'admin/modules/fees.less';
 
 @import 'components/admin-sidebar.less';
 @import 'components/asynchronous-tasks.less';
