Fix Search By Box styles in Manage Listings admin page.

--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -401,7 +401,7 @@
 }
 
 
-.awpcp-listings {
+.awpcp-admin-listings {
     .add {
         margin-bottom: 10px;
     }
@@ -409,18 +409,6 @@
     .subsubsub {
         float: none;
         margin-top: 5px;
-    }
-
-    .awpcp-search-container {
-        margin: 5px 0 10px;
-
-        .search-by-box {
-            float: left;
-            margin: 5px 10px 0 0;
-        }
-        .search-box {
-            float: left;
-        }
     }
 
     table {
@@ -431,6 +419,20 @@
 
     #classiwrapper {
         padding: 0;
+    }
+}
+
+.awpcp-admin-listings, .awpcp-panel {
+    .awpcp-search-container {
+        margin: 5px 0 10px;
+
+        .search-by-box {
+            float: left;
+            margin: 5px 10px 0 0;
+        }
+        .search-box {
+            float: left;
+        }
     }
 }
 
