--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -556,7 +556,7 @@
 /* =Debug Page
 ---------------------------------------------------------------------------- */
 
-#awpcp-admin-debug {
+.awpcp-debug {
     .nav-tab-wrapper {
         margin-bottom: 20px;
     }
