--- a/resources/less/components/listings-widget.less
+++ b/resources/less/components/listings-widget.less
@@ -40,6 +40,7 @@
                 width: 100%;
 
                 img {
+                    height: auto;
                     max-width: 100%;
                     margin: 0 auto;
                 }
