Add new Manage Categories admin page (#1112).

--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -10,10 +10,12 @@
 @import 'messages.less';
 
 @import 'admin/layout.less';
+@import 'admin/common.less';
 @import 'admin/modules/spinner.less';
 
 @import 'admin/modules/form-fields.less';
 @import 'admin/modules/fees.less';
+@import 'admin/modules/manage-categories.less';
 
 @import 'components/admin-sidebar.less';
 @import 'components/asynchronous-tasks.less';
