Update appearance fo Add/Edit Fee form.

--- a/resources/less/admin/modules/fees.less
+++ b/resources/less/admin/modules/fees.less
@@ -1,3 +1,15 @@
+
+/* =Admin Fees
+---------------------------------------------------------------------------- */
+
+.awpcp-admin-fees form .awpcp-message {
+    margin-bottom: 0;
+}
+
+.awpcp-admin-fees .inline-edit-col label .helptext {
+    float: right;
+}
+
 #wpbody-content .awpcp-admin-fees .inline-edit-row .awpcp-fee-form-categories-column {
     box-sizing: border-box;
     padding-left: 15px;
@@ -5,5 +17,23 @@
 
     .cat-checklist label {
         line-height: 1;
+    }
+}
+
+.awpcp-admin-fee-entry-form {
+    textarea {
+        width: 100%;
+    }
+
+    .awpcp-inline-form-title {
+        margin: 0.6em 0 .76em;
+        text-transform: uppercase;
+    }
+}
+
+#wpbody-content .inline-edit-row .awpcp-admin-fee-entry-form {
+    .inline-edit-col-left,
+    .inline-edit-col-right {
+        width: 50%;
     }
 }
