--- a/resources/less/admin/common.less
+++ b/resources/less/admin/common.less
@@ -4,3 +4,20 @@
 .awpcp-admin-page .postbox .inside *:first-child {
     margin-top: 0;
 }
+
+.awpcp-inline-form-half-width-field {
+    box-sizing: border-box;
+    display: inline-block !important;
+    width: 50%;
+}
+.awpcp-inline-form-half-width-field-left {
+    padding-right: 4px;
+}
+.awpcp-inline-form-half-width-field-right {
+    padding-left: 4px;
+}
+
+.awpcp-inline-form-section-header .title {
+    font-weight: bold;
+    width: 100% !important;
+}
