Add Value Selector JavaScript component.
The component is still missing validation features and
ability to restrict visible category options based on
selected payment terms.

--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -21,6 +21,7 @@
 @import 'components/thumbnails-generator.less';
 @import 'components/multiple-region-selector.less';
 @import 'components/multiple-region-selector-form-table.less';
+@import 'components/multiple-value-selector.less';
 @import 'components/search-listings-widget.less';
 
 @import 'page-place-ad.less';
