Show validation errors when seleted categories have no available payment terms.

--- a/resources/less/colors.less
+++ b/resources/less/colors.less
@@ -1,3 +1,7 @@
 @attachment_awaiting_approval_background: #FFF6DB;
 @attachment_rejected_background: #FFB3B3;
 @attachment_approved_background: transparent;
+
+@error-message-background-color: #FFEBE8;
+@error-message-border-color: #CC0000;
+@error-message-font-color: #ff0000;
