--- a/resources/less/components/multiple-value-selector.less
+++ b/resources/less/components/multiple-value-selector.less
@@ -43,3 +43,10 @@
 .awpcp-value-selector-step:nth-child(2n) {
     padding-left: 4px;
 }
+
+.awpcp-value-selector-errors p {
+    .awpcp-message;
+    .awpcp-error;
+    border-radius: 4px;
+    margin-bottom: 0.5em;
+}
