--- a/resources/less/messages.less
+++ b/resources/less/messages.less
@@ -48,10 +48,11 @@
     border-color: #E6DB55;
     display: block !important;
 }
+
 .awpcp-error {
-    background-color: #FFEBE8;
-    border-color: #CC0000;
-    color: #ff0000;
+    background-color: @error-message-background-color;
+    border-color: @error-message-border-color;
+    color: @error-message-font-color;
     font-weight: normal;
     font-size: 14px;
 }
