Use dashicons-no as the Remove Category button.

--- a/resources/less/components/multiple-value-selector.less
+++ b/resources/less/components/multiple-value-selector.less
@@ -8,9 +8,20 @@
         border: 1px solid #eee;
         border-radius: 4px;
         box-shadow: none;
-        margin-left: 6px;
+        margin: 0;
         padding: 2px 4px;
         font-size: 0.7em;
+    }
+
+    .awpcp-value-selector-remove-button {
+        border-radius: 2px;
+        color: @error-message-font-color;
+        float: right;
+        margin-left: 6px;
+
+        &:hover {
+            color: inherit;
+        }
     }
 
     .awpcp-value-selector-label {
