Update appearance of Add/Edit Fee form.

--- a/resources/less/admin/modules/fees.less
+++ b/resources/less/admin/modules/fees.less
@@ -48,8 +48,8 @@
     }
 
     .category-checklist {
-        height: 400px;
-        max-height: 400px;
+        height: 395px;
+        max-height: 395px;
 
         li {
             margin-bottom: 0;
@@ -72,6 +72,22 @@
 
         ul ul {
             padding-right: 0;
+        }
+    }
+
+    .awpcp-admin-fee-entry-form-duration-field {
+        .title {
+            display: inline-block;
+            float: none;
+        }
+        .input-text-wrap {
+            display: inline-block;
+            margin: 0;
+            width: 60px;
+        }
+        select {
+            margin-left: 4px;
+            vertical-align: initial;
         }
     }
 
