Add new implementation of Fee Details form.

--- a/resources/less/admin/modules/fees.less
+++ b/resources/less/admin/modules/fees.less
@@ -91,3 +91,35 @@
         width: 50%;
     }
 }
+
+.awpcp-fee-duration-field {
+    margin-bottom: 6px;
+    label {
+        float: left;
+        margin-top: 5px;
+        width: 60%;
+    }
+    div {
+        margin-left: 60%;
+        width: 40%;
+
+        input, select {
+            width: 48%;
+            box-sizing: border-box;
+        }
+        input {
+            margin-right: 1%;
+            vertical-align: middle;
+        }
+    }
+}
+
+.awpcp-admin-categories-selector {
+    margin-top: 16px;
+
+    .category-checklist {
+        background: #F8F8F8;
+        margin-top: 5px;
+        padding: 15px;
+    }
+}
