--- a/resources/less/admin/modules/form-fields.less
+++ b/resources/less/admin/modules/form-fields.less
@@ -12,3 +12,86 @@
 .awpcp-form-fields-table-spinner {
     margin: 0;
 }
+
+.awpcp-admin-form {
+    background: #fff;
+    border: 1px solid #e5e5e5;
+    padding: 20px;
+
+    h1 {
+        margin-bottom: 20px;
+    }
+}
+
+.awpcp-admin-form-fieldset {
+    margin-bottom: 30px;
+}
+
+.awpcp-admin-form-field,
+.awpcp-admin-form-textfield,
+.awpcp-admin-form-text-field-with-left-label,
+.awpcp-admin-form-textarea,
+.awpcp-admin-form-checkbox,
+.awpcp-admin-form-radio-buttons {
+    margin-bottom: 6px;
+}
+
+.awpcp-admin-form-textfield {
+    label {
+        display: block;
+    }
+    input[type="text"] {
+        width: 100%;
+    }
+}
+
+.awpcp-admin-form-text-field-with-left-label {
+    label {
+        float: left;
+        margin-top: 5px;
+        width: 60%;
+    }
+
+    input[type="text"] {
+        display: inherit;
+        margin-left: 60%;
+        width: 40%;
+    }
+}
+
+.awpcp-admin-form-textarea {
+    label {
+        display: block;
+    }
+    textarea {
+        width: 100%;
+    }
+}
+
+.awpcp-admin-form-checkbox {
+    span {
+        color: #777;
+        display: block;
+        margin: 2px 0 0 20px;
+        font-style: italic;
+    }
+}
+
+.awpcp-admin-form-checkbox-textfield {
+
+}
+
+.awpcp-admin-form-radio-buttons {
+    label {
+        display: block;
+        margin-bottom: 4px;
+    }
+}
+
+.awpcp-admin-form-submit-buttons {
+    margin-top: 46px;
+
+    input[type="submit"], input[type="button"] {
+        margin-right: 4px;
+    }
+}
