Add Fee Prices admin page.

--- a/resources/less/common.less
+++ b/resources/less/common.less
@@ -30,6 +30,10 @@
     display: none;
 }
 
+.awpcp-text-underline {
+    text-decoration: underline;
+}
+
 .awpcp-hide-if-js {
     display: none;
 }
