Add Backbone-based multiple categories selector.

--- a/resources/less/common.less
+++ b/resources/less/common.less
@@ -12,10 +12,10 @@
 *:first-child+html .clearfix,
 *:first-child+html .awpcp-clearfix { zoom: 1; } /* IE7 */
 
-.align-text-right {
+.awpcp-align-text-right, .align-text-right {
     text-align: right;
 }
-.align-text-left {
+.awpcp-align-text-left, .align-text-left {
     text-align: left;
 }
 
