Add Payment Terms List UI Component.

--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -22,4 +22,5 @@
 @import 'components/form-steps.less';
 @import 'components/media-manager.less';
 @import 'components/media-uploader.less';
+@import 'components/payment-terms-list.less';
 @import 'components/thumbnails-generator.less';
