--- a/resources/less/components/multiple-region-selector.less
+++ b/resources/less/components/multiple-region-selector.less
@@ -9,7 +9,8 @@
     }
 }
 
-#classiwrapper, .awpcp-multiple-region-selector {
+#classiwrapper .awpcp-multiple-region-selector,
+.awpcp-multiple-region-selector {
     ul {
         margin: 0;
         padding: 0 !important;
