Set fixed font size for headings in Order Step.

--- a/resources/less/page-place-ad.less
+++ b/resources/less/page-place-ad.less
@@ -1,3 +1,11 @@
+/* Order Form */
+
+.awpcp-order-form h3 {
+    font-size: 17px;
+    margin-top: 1.5em;
+    margin-bottom: 5px;
+}
+
 /* Upload Images Step */
 
 #classiwrapper .upload-conditions, .upload-conditions {
