Update awpcp-*box CSS classes.

--- a/resources/less/common.less
+++ b/resources/less/common.less
@@ -66,11 +66,11 @@
 
 @box-background-color: #FAFAFA;
 @box-border-color: #D2D2D2;
-@box-border-radius: 4px;
+@box-border-radius: 2px;
 
 .awpcp-box {
     background: @box-background-color;
-    padding: 10px 0;
+    padding: 10px;
 }
 
 .awpcp-rounded-box {
