--- a/resources/less/components/multiple-categories-selector.less
+++ b/resources/less/components/multiple-categories-selector.less
@@ -74,6 +74,9 @@
     border-width: 0 0 1px;
 }
 
+.awpcp-categories-selector-categories-list {
+    margin: 0;
+}
 .awpcp-categories-selector-categories-list-title {
     .awpcp-bordered-box;
 
@@ -83,6 +86,7 @@
     font-size: 14px;
     font-weight: bold;
     padding: 2px 10px;
+    margin: 0;
 }
 
 .awpcp-categories-selector-categories-list-items {
