Add CSS styles for hover and active states in Payment Terms List.

--- a/resources/less/components/payment-terms-list.less
+++ b/resources/less/components/payment-terms-list.less
@@ -64,9 +64,21 @@
         background: #FDFDFD;
         border-radius: 2px;
         border-color: #F3F3F3;
+        cursor: pointer;
         display: block;
         padding: 8px 8px;
         font-size: 20px;
+
+        &:hover {
+            background: #fff;
+            border-color: #d0d0d0;
+        }
+
+        &:active {
+            background: #BBB;
+            border-color: #999;
+            color: #FFF;
+        }
 
         input {
             vertical-align: 2px;
