Remove deprecated CSS class: textareainput.

--- a/resources/less/common/forms.less
+++ b/resources/less/common/forms.less
@@ -1,5 +1,4 @@
-// TODO: remove .textareinput uses after 3.0.2 release
-.awpcp-textarea, .textareainput {
+.awpcp-textarea {
     width: 80%;
     border: 1px inset #888;
 }
@@ -18,7 +17,7 @@
         width: 100%;
     }
 
-    .awpcp-textarea, .textareainput {
+    .awpcp-textarea {
         width: 100%;
     }
 }
