--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -1,11 +1,11 @@
 @import 'legacy/frontend.less';
 
+@import 'common/forms.less';
 @import 'common/state.less';
 @import 'common.less';
 @import 'colors.less';
 @import 'icons.less';
 @import 'messages.less';
-@import 'forms.less';
 @import 'tables.less';
 
 @import 'frontend/modules/listings.less';
