--- a/resources/less/legacy/frontend.less
+++ b/resources/less/legacy/frontend.less
@@ -134,7 +134,7 @@
     margin-top: 0;
     margin-left: 4px;
 }
-.awpcp-page .awpcp-form-spacer .textareainput {
+.awpcp-page .awpcp-form-spacer .awpcp-textarea {
     display: block;
 }
 
