--- a/resources/less/common/forms.less
+++ b/resources/less/common/forms.less
@@ -1,10 +1,17 @@
+.awpcp-textfield, .inputbox,
 .awpcp-textarea {
+    box-sizing: border-box;
+    border: 1px solid #888888;
     width: 80%;
-    border: 1px inset #888;
+}
+
+.awpcp-textfield, .inputbox {
+    padding: 5px;
+    background-color: #ffffff;
+    color: #000000;
 }
 
 @media only screen and (max-width: 480px) {
-
     .awpcp-page {
         .button, input[type="submit"] {
             margin-bottom: 5px;
@@ -12,11 +19,8 @@
         }
     }
 
-    // select,
-    .awpcp-dropdown {
-        width: 100%;
-    }
-
+    .awpcp-dropdown,
+    .awpcp-textfield, .inputbox,
     .awpcp-textarea {
         width: 100%;
     }
