--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -385,19 +385,17 @@
     }
 
     .subsubsub {
-        float: none;
-        margin-top: 5px;
+        margin-top: 8px;
     }
 
     .awpcp-search-container {
-        margin: 5px 0 10px;
-
         .search-by-box {
-            float: left;
-            margin: 5px 10px 0 0;
-        }
-        .search-box {
-            float: left;
+            float: right;
+            margin: 0 4px 0 0;
+
+            select {
+                margin-top: 0;
+            }
         }
     }
 
