--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -385,17 +385,19 @@
     }
 
     .subsubsub {
-        margin-top: 8px;
+        float: none;
+        margin-top: 5px;
     }
 
     .awpcp-search-container {
-        .search-by-box {
-            float: right;
-            margin: 0 4px 0 0;
+        margin: 5px 0 10px;
 
-            select {
-                margin-top: 0;
-            }
+        .search-by-box {
+            float: left;
+            margin: 5px 10px 0 0;
+        }
+        .search-box {
+            float: left;
         }
     }
 
