Remove margin form Multiple Category Selector elements.

--- a/resources/less/components/multiple-categories-selector.less
+++ b/resources/less/components/multiple-categories-selector.less
@@ -96,13 +96,14 @@
     overflow: scroll;
 }
 
-.awpcp-categories-selector-category-item {
+.awpcp-categories-selector-categories-list-items .awpcp-categories-selector-category-item {
     .awpcp-bordered-box;
 
     border-width: 0 0 1px;
     box-sizing: border-box;
     display: table;
     font-size: 12px;
+    margin: 0;
     padding: 10px 10px;
     width: 100%;
 
