Remove margin from Payment Terms List items.

--- a/resources/less/components/payment-terms-list.less
+++ b/resources/less/components/payment-terms-list.less
@@ -1,7 +1,4 @@
-.awpcp-payment-terms-list {
-}
-
-.awpcp-payment-terms-list-payment-term {
+.awpcp-payment-terms-list .awpcp-payment-terms-list-payment-term {
     margin: 0 0 6px;
     padding: 10px;
 
