Fix margin of file actions in Upload Files step.

--- a/resources/less/components/media-manager.less
+++ b/resources/less/components/media-manager.less
@@ -127,7 +127,7 @@
         float: left;
         border: 1px solid #E2E2E2;
         border-radius: 2px;
-        margin-right: 2px;
+        margin: 0 2px 0 0;
         background: #FBFBFB;
 
         a, label {
