--- a/resources/less/components/multiple-categories-selector.less
+++ b/resources/less/components/multiple-categories-selector.less
@@ -91,10 +91,9 @@
         border-radius: 2px;
         box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2), inset 0px 1px 0px 0px #FFF;
         color: #4A4A4A;
-        font-size: smaller;
         padding: 6px 8px 5px;
         text-shadow: 0 1px 0 #EEE;
-        vertical-align: 2px;
+        vertical-align: middle;
     }
 
     .awpcp-categories-selctor-category-action:focus {
