Fix appearane of payment terms in Payment Terms List.

--- a/resources/less/components/payment-terms-list.less
+++ b/resources/less/components/payment-terms-list.less
@@ -1,4 +1,5 @@
 .awpcp-payment-terms-list .awpcp-payment-terms-list-payment-term {
+    list-style-type: none;
     margin: 0 0 6px;
     padding: 10px;
 
