--- a/resources/less/components/payment-terms-list.less
+++ b/resources/less/components/payment-terms-list.less
@@ -11,9 +11,7 @@
     }
 
     .awpcp-payment-term-duration {
-        float: left;
         text-align: center;
-        width: 15%;
 
         .awpcp-payment-term-duration-amount,
         .awpcp-payment-term-duration-interval {
@@ -32,9 +30,7 @@
 
     .awpcp-payment-term-content {
         box-sizing: border-box;
-        float: left;
-        padding: 0 10px;
-        width: 60%;
+        padding: 10px 10px 0;
 
         .awpcp-payment-term-name {
             font-size: 1.1em;
@@ -49,14 +45,13 @@
             li {
                 list-style-type: disc !important;
                 list-style-position: inside;
-                line-height: 1.25em
+                line-height: 1.25em;
+                margin: 0;
             }
         }
     }
 
     .awpcp-payment-term-price {
-        float: left;
-        width: 25%;
 
         label {
             .awpcp-bordered-box;
@@ -93,5 +88,23 @@
         .awpcp-payment-term-price-in-credits {
             margin-bottom: 0;
         }
+    }
+}
+
+.awpcp-payment-terms-list-520 {
+    .awpcp-payment-term-duration,
+    .awpcp-payment-term-content,
+    .awpcp-payment-term-price {
+        float: left;
+    }
+    .awpcp-payment-term-duration {
+        width: 15%;
+    }
+    .awpcp-payment-term-content {
+        padding-top: 0;
+        width: 60%;
+    }
+    .awpcp-payment-term-price {
+        width: 25%;
     }
 }
