Fix appearance of Payment Terms List in admin screens.

--- a/resources/less/components/payment-terms-list.less
+++ b/resources/less/components/payment-terms-list.less
@@ -63,6 +63,7 @@
             display: block;
             padding: 4px 8px;
             font-size: 20px;
+            line-height: 1.71em;
 
             &:hover {
                 background: #fff;
@@ -88,6 +89,12 @@
         .awpcp-payment-term-price-in-credits {
             margin-bottom: 0;
         }
+    }
+}
+
+.wp-admin {
+    .awpcp-payment-terms-list .awpcp-payment-term-price input {
+        vertical-align: -1px;
     }
 }
 
