--- a/resources/less/components/multiple-categories-selector.less
+++ b/resources/less/components/multiple-categories-selector.less
@@ -90,10 +90,14 @@
         border: 1px solid #979797;
         border-radius: 2px;
         box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2), inset 0px 1px 0px 0px #FFF;
+        box-sizing: border-box;
         color: #4A4A4A;
-        padding: 6px 8px 5px;
+        font-family: dashicons;
+        padding: 3px 0px;
         text-shadow: 0 1px 0 #EEE;
         vertical-align: middle;
+        width: 25px;
+        height: 25px;
     }
 
     .awpcp-categories-selctor-category-action:focus {
