Update appearance of error messages in Import Listings page.

--- a/resources/less/admin/modules/import-listings.less
+++ b/resources/less/admin/modules/import-listings.less
@@ -5,6 +5,7 @@
     overflow-x: hidden;
 
     li {
+        background: #E2E2E2;
         border-bottom: 1px solid #CCC;
         margin: 0;
 
@@ -13,14 +14,19 @@
         }
 
         span {
-            display: inline-block;
+            display: block;
+            float: left;
             padding: 4px;
         }
 
         .message-description {
-            background: #E2E2E2;
             padding-left: 8px;
             width: 150px;
+        }
+        .message-content {
+            float: none;
+            margin-left: 162px;
+            background: #f1f1f1;
         }
     }
 }
