Improve appearance of Payment Terms Table.

--- a/resources/less/common.less
+++ b/resources/less/common.less
@@ -59,3 +59,20 @@
     list-style-type: none;
     padding: 0;
 }
+
+@box-background-color: #FAFAFA;
+@box-border-color: #D2D2D2;
+@box-border-radius: 2px;
+
+.awpcp-box {
+    background: @box-background-color;
+    padding: 10px;
+}
+
+.awpcp-rounded-box {
+    border-radius: @box-border-radius;
+}
+
+.awpcp-bordered-box {
+    border: 1px solid @box-border-color;
+}
