--- a/resources/less/tables.less
+++ b/resources/less/tables.less
@@ -1,12 +1,15 @@
 .awpcp-table {
-
-    border-bottom: 1px solid #DDDDDD;
+    border: none;
     margin: 0 0 1.625em;
     width: 100%;
 
     th, td {
-        padding: 6px 10px 6px 0;
+        padding: 6px;
         text-align: left;
+    }
+    th {
+        background: #EFEFEF;
+        font-weight: bold;
     }
 
     td {
@@ -22,6 +25,10 @@
         /* Force table to not be like tables anymore */
         table, thead, tbody, th, td, tr {
             display: block;
+        }
+
+        th {
+            border: none;
         }
 
         /* Hide table headers (but not display: none;, for accessibility) */
@@ -45,7 +52,7 @@
                 position: relative;
                 padding-top: 3px;
                 padding-bottom: 3px;
-                padding-left: 70% !important;
+                padding-left: 60% !important;
                 white-space: normal;
                 text-align:left;
             }
