Improve appearance of Transaction Items and Payment Methods tables.

--- a/resources/less/components/payment-terms-table.less
+++ b/resources/less/components/payment-terms-table.less
@@ -8,28 +8,10 @@
     }
 }
 .awpcp-payment-terms-table-payment-term-price {
-    .awpcp-bordered-box;
+    .awpcp-button;
 
-    background: #FDFDFD;
-    border-radius: 2px;
-    border-color: #CCC;
-    cursor: pointer;
-    display: block;
-    padding: 4px 8px 6px;
     font-size: 16px;
-    // line-height: 1.3em;
     text-align: center;
-
-    &:hover {
-        background: #fff;
-        border-color: #d0d0d0;
-    }
-
-    &:active {
-        background: #BBB;
-        border-color: #999;
-        color: #FFF;
-    }
 
     input, span {
         vertical-align: middle;
