--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -19,6 +19,7 @@
 @import 'components/media-manager.less';
 @import 'components/media-uploader.less';
 @import 'components/payment-terms-table.less';
+@import 'components/payment-methods-list.less';
 @import 'components/thumbnails-generator.less';
 @import 'components/multiple-region-selector.less';
 @import 'components/multiple-region-selector-form-table.less';
