Improve appearance of Post Listing form on mobile devices.

--- a/resources/less/page-place-ad.less
+++ b/resources/less/page-place-ad.less
@@ -1,3 +1,24 @@
+.awpcp-terms-of-service-checkbox {
+    display: inline-block !important;
+    margin: 4px 0;
+    padding: 6px 10px 6px 30px;
+    position: relative;
+
+    input[type="checkbox"] {
+        font-size: 16px;
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        margin-top: -7px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .awpcp-terms-of-service-checkbox {
+        display: block !important;
+    }
+}
+
 /* Upload Images Step */
 
 #classiwrapper .upload-conditions, .upload-conditions {
