Use awpcp-button CSS class in 'Select Files' button (#1695).

--- a/resources/less/components/media-uploader.less
+++ b/resources/less/components/media-uploader.less
@@ -41,4 +41,7 @@
 
 .awpcp-media-uploader-browser-button {
     box-sizing: border-box;
+    color: #666;
+    display: inline-block;
+    font-weight: bold;
 }
