--- a/resources/less/components/payment-methods-list.less
+++ b/resources/less/components/payment-methods-list.less
@@ -5,6 +5,8 @@
         label {
             .awpcp-button;
 
+            padding-top: 4px;
+
             &:active {
                 background: #FDFDFD;
                 border-color: #666;
