For TB_closeWindow element to have box-sizing: content-box (#1695).

--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -2,6 +2,7 @@
 
 @import 'common/forms.less';
 @import 'common/state.less';
+@import 'common/thickbox.less';
 @import 'common.less';
 @import 'colors.less';
 @import 'icons.less';
