Fix width of category icon in smaller screens (#1703).

--- a/resources/less/legacy/frontend.less
+++ b/resources/less/legacy/frontend.less
@@ -472,9 +472,15 @@ p.maincategoryclass {
     margin: 0 0 3px 0;
 }
 
+.awpcp-category-icon {
+    display: block;
+    margin: 0 4px;
+}
+.awpcp-category-icon-image,
 .categoryicon {
-    margin:0px 2px 0px 2px;
-    vertical-align:middle;
+    box-sizing: border-box;
+    vertical-align: middle;
+    max-width: 100%;
 }
 
 .theuploaddiv .button {  margin-top:20px; padding:6px; }
